--- a/.github/workflows/summarize-pr.yml
+++ b/.github/workflows/summarize-pr.yml
@@ -11,7 +11,6 @@ permissions:
 jobs:
   summarize:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository (full history)
         uses: actions/checkout@v4
@@ -21,12 +20,16 @@ jobs:
       - name: Ensure tools present
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y jq
+          sudo apt-get install -y jq python3
+
+      - name: Make script executable
+        run: |
+          chmod +x .github/scripts/summarize_pr.sh
 
       - name: Run PR summarizer
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           POLLINATIONS_REFERRER: prisimai.github.io
+          MAX_DIFF_BYTES: 32768
         run: |
-          chmod +x .github/scripts/summarize_pr.sh
           ./.github/scripts/summarize_pr.sh
